--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
         "api/index.php": { "runtime": "vercel-php@0.7.3" }
     },
     "routes": [
-        { "src": "/build/(.*)", "dest": "/public/build/" },
-        { "src": "/(.*)", "dest": "/api/index.php" }
+        { "src": "/(.*)", "dest": "public/index.php" }
     ],
     "public": true,
     "buildCommand": "vite build",
