--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,10 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.7.3" }
     },
-    "routes": [
-        { "src": "/(.*)", "dest": "public/index.php" }
-    ],
+    "routes": [{
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }],
     "public": true,
     "buildCommand": "vite build",
     "outputDirectory": "public",
