--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,12 @@
     },
     "routes": [{
         "src": "/(.*)",
-        "dest": "/api/index.php"
+        "dest": "api/index.php"
     }],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://portofolio-kappa-plum.vercel.app/",
+        "APP_URL": "",
         "APP_KEY": "base64:MeC7KCP97285J+c+RfQLKEmMCJYMOFTKqF6ki5jsuhc=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
