--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "",
+        "APP_URL": "https://web-porto-rifkycahya.vercel.app/",
         "APP_KEY": "base64:MeC7KCP97285J+c+RfQLKEmMCJYMOFTKqF6ki5jsuhc=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
