--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,15 @@
         "api/index.php": { "runtime": "vercel-php@0.7.3" }
     },
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
-    ],
+    {
+        "src": "/build/(.*)",
+        "dest": "/build/$1"
+    },
+    {
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }
+],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
